[gd_scene load_steps=5 format=3 uid="uid://d4dwytf0kqhoo"]

[ext_resource type="Script" path="res://Tela/Tela_Criacao_Alarme.gd" id="1_4ahin"]
[ext_resource type="Texture2D" uid="uid://il1758xxc2sg" path="res://Recursos/fundoBranco.png" id="1_th7iq"]
[ext_resource type="FontFile" uid="uid://cpeaapfn2mi8t" path="res://Recursos/Fontes/Poppins/Poppins-Bold.ttf" id="2_jgd5l"]
[ext_resource type="Texture2D" uid="uid://28egf6htbq2e" path="res://Recursos/button base.png" id="3_6vm5q"]

[node name="Tela_Criação_Alarme" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ahin")

[node name="FundoBranco" type="Sprite2D" parent="."]
z_index = -2
texture = ExtResource("1_th7iq")
centered = false

[node name="LabelAdicionarLembrete" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.028125
anchor_bottom = -0.028125
offset_top = 53.0
offset_right = 1080.0
offset_bottom = 216.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jgd5l")
theme_override_font_sizes/font_size = 50
text = "Adicionar Lembrete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 0
offset_top = 354.0
offset_right = 1078.0
offset_bottom = 925.0

[node name="LabelNome" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jgd5l")
theme_override_font_sizes/font_size = 50
text = "(nome do medicamento)"
horizontal_alignment = 1

[node name="VBoxInformacoes" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelTituloSubstancia" type="Label" parent="VBoxContainer/VBoxInformacoes"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jgd5l")
theme_override_font_sizes/font_size = 50
text = "SUBSTÂNCIA(S): "

[node name="LabelSubstancia" type="Label" parent="VBoxContainer/VBoxInformacoes"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jgd5l")
theme_override_font_sizes/font_size = 50
text = "(nome da substância)"
autowrap_mode = 3

[node name="LabelTituloFabricante" type="Label" parent="VBoxContainer/VBoxInformacoes"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jgd5l")
theme_override_font_sizes/font_size = 50
text = "FABRICANTE(S): "

[node name="LabelFabricante" type="Label" parent="VBoxContainer/VBoxInformacoes"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jgd5l")
theme_override_font_sizes/font_size = 50
text = "(nome do fabricante)"
autowrap_mode = 3

[node name="LabelTituloConfigurar" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jgd5l")
theme_override_font_sizes/font_size = 50
text = "Configurar Lembrete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotaoAdicionar" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.29537
anchor_top = 0.941667
anchor_right = 0.29537
anchor_bottom = 0.941667
offset_left = -112.0
offset_top = -70.0
offset_right = 560.0
offset_bottom = 56.0
texture_normal = ExtResource("3_6vm5q")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="BotaoAdicionar"]
layout_mode = 0
offset_right = 664.0
offset_bottom = 126.0
theme_override_fonts/font = ExtResource("2_jgd5l")
theme_override_font_sizes/font_size = 50
text = "Adicionar"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="BotaoAdicionar" to="." method="_on_botao_adicionar_pressed"]
